# openshift-ai-tests

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  renovate.json
docs/: DEVELOPER_GUIDE.md
tests/: global_config.py
tests/model_servering/server/llm/: conftest.py  test_base_inference_service.py
tests/trustyai/: conftest.py  minio.py  utils.py
tests/trustyai/utils/: minio.py
utilities/: constants.py  inference_service.py  serving_runtime.py
