[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.poetry]
name = "openshift-ai-tests"
version = "0.1.0"
description = "Test repository for Red Hat Openshift AI"
authors = ["rnetser <rnetser@redhat.com>", "lgiorgi <lgiorgi@redhat.com>", "mwaykole <mwaykole@redhat.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "*" }]
homepage = "https://github.com/red-hat-data-services/openshift-ai-tests"
keywords = ["Openshift", "RHOAI", "ODH"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry.urls]
Download = "https://pypi.org/project/openshift-ai-tests/"
"Bug Tracker" = "https://github.com/red-hat-data-services/openshift-ai-tests/issues"

[tool.poetry.dependencies]
python = "^3.8"
python-simple-logger = "^1.0.39"
openshift-python-wrapper = "^10.0.85"
pytest = "^8.3.3"
pytest-jira = "^0.3.21"
jira = "^3.8.0"
pytest-testconfig = "^0.2.0"
pytest-order = "^1.3.0"
pytest-dependency = "^0.6.0"
pytest-progress = "^1.3.0"
openshift-python-utilities = "^5.0.66"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
